--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <table cellspacing="25">
-    <td><img src="areeb_and_lucky-modified_55.png" alt=""></td>
+    <td><img src="areeb_and_lucky-modified_55.png" ></td>
     <td>
       <h1>Talha Mudassir</h1>
       <p><em>A <strong><a href="https://en.wikipedia.org/wiki/Enthusiast_computing">Tech Enthutiast</a></strong> of age 15 ,studying in a high school</em></p>
