--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <input type="email" name="Your Email" value="">
     <br>
     <label for="">Your Message</label>
-    <textarea name="name" rows="3" cols="30"></textarea>
+    <textarea name="Message" rows="3" cols="30"></textarea>
     <br>
     <input type="submit" name="">
     <br>
