--- a/index.html
+++ b/index.html
@@ -5,20 +5,36 @@
   <meta charset="utf-8">
   <title>Talha Personal Website
   </title>
+  <style media="screen">
+    body {
+      background-color: "#B1D0E0";
+    }
+    hr {
+    border-style:none;
+    border-top-style: dotted;
+    background-color: white;
+    width: 8%;
+    border-color: grey;
+    border-width: 8px;
+    }
+
+
+  </style>
 </head>
 
 <body>
   <table cellspacing="25">
-    <td><img src="images/areeb_and_lucky-modified_55.png" alt="TALHA Personal Photo" ></td>
+    <td><img src="D:\web\HTML-PERSONAL SITE\areeb_and_lucky-modified_55.png" alt=""></td>
     <td>
       <h1>Talha Mudassir</h1>
+
       <p><em>A <strong><a href="https://en.wikipedia.org/wiki/Enthusiast_computing">Tech Enthutiast</a></strong> of age 15 ,studying in a high school</em></p>
       <p> I am a student who always have an hunger to <strong>learn new things</strong>,beside normal school studying</p>
     </td>
   </table>
 
 
-  <hr size="2" noshade>
+  <hr>
   <h3>Education</h3>
   <p>
   <ul>
@@ -27,7 +43,7 @@
     <li> <a href="http://www.cmseducation.org/">City Montessori School</a></li>
   </ul>
   </p>
-  <hr size="2" noshade>
+  <hr>
   <h3>Hobbies</h3>
   <p>
   <ul>
@@ -54,7 +70,7 @@
     </ol>
   </ul>
   </p>
-  <hr size="2" noshade>
+  <hr>
   <h3><strong>Skills</strong></h3>
   <p>
   <table cellspacing="10">
@@ -85,14 +101,15 @@
       </td>
     </tr>
   </table>
-<hr size="2" noshade>
+  <hr>
 
   </p>
   <p>
     <strong><a href="contact.html">CONTACT ME</a></strong>
   </p>
-  <hr size="2" noshade>
+  <hr>
 </body>
 
 
 </html>
+
