--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <table cellspacing="25">
-    <td><img src="D:\web\HTML-PERSONAL SITE\areeb_and_lucky-modified_55.png" alt=""></td>
+    <td><img src="images/areeb_and_lucky-modified_55.png" alt=""></td>
     <td>
       <h1>Talha Mudassir</h1>
 
